// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consent Data Snapshots analytics only consent snapshot 1`] = `
{
  "ad_personalization": "denied",
  "ad_storage": "denied",
  "ad_user_data": "denied",
  "analytics_storage": "granted",
  "functionality_storage": "granted",
  "security_storage": "granted",
}
`;

exports[`Consent Data Snapshots default consent mode values match GDPR requirements 1`] = `
{
  "ad_personalization": "denied",
  "ad_storage": "denied",
  "ad_user_data": "denied",
  "analytics_storage": "denied",
  "functionality_storage": "granted",
  "security_storage": "granted",
}
`;

exports[`Consent Data Snapshots full acceptance consent snapshot 1`] = `
{
  "ad_personalization": "granted",
  "ad_storage": "granted",
  "ad_user_data": "granted",
  "analytics_storage": "granted",
  "functionality_storage": "granted",
  "security_storage": "granted",
}
`;
